@@ -98,6 +98,7 @@ groff_TESTS = \
   src/roff/groff/tests/localization-works.sh \
   src/roff/groff/tests/msoquiet-request-works.sh \
   src/roff/groff/tests/output-request-works.sh \
+  src/roff/groff/tests/pchar-request-works.sh \
   src/roff/groff/tests/pi-request-works.sh \
   src/roff/groff/tests/ps-device-smoke-test.sh \
   src/roff/groff/tests/recognize-end-of-sentence.sh \
